--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,8 @@
 /* ASSETS */
 
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; */
 
 /* ======================================== */
 /* FONT */
