--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,6 @@
 /* ======================================== */
 /* FONT */
 
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
 
 /* GLOBAL STYLES */
 * {
@@ -17,7 +16,7 @@
 }
 
 body {
-    font-family: "Ubuntu";
+    font-family: "Lexend";
 }
 
 
